# ringcentral_callrecordings

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  SANITIZATION_SUMMARY.md  auth.py  classify_calls.py  fetch_recordings.py  main.py  pyproject.toml  requirements.txt  transcribe.py  transcribe_v2.py
