[project]
name = "ringcentral-callrecordings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-dtypes>=1.4.4",
    "dotenv>=0.9.9",
    "faster-whisper>=1.2.1",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-storage>=3.8.0",
    "google-genai>=1.64.0",
    "pandas>=3.0.0",
    "requests>=2.32.5",
]
